# Qt-Labs

./: mainwindow.cpp
Lab4/: CMakeLists.txt  EditDialog.cpp  EditDialog.hpp  Figure.cpp  Figure.hpp  Makefile  Slider.cpp  Slider.hpp  lab4.cpp  lab4.hpp  main.cpp
Lab5/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp  TextEditor.cpp  TextEditor.hpp  highlighter.cpp  main.cpp
task1/: CMakeLists.txt  main.cpp  window.hpp
task2/: CMakeLists.txt  main.cpp  main2.cpp  sidebars.cpp  window.hpp
task3/: CMakeLists.txt  main.cpp  window.hpp
